--- a/static/css/timeline.scss
+++ b/static/css/timeline.scss
@@ -178,5 +178,5 @@
 
 #place-search,
 .chart-container {
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
